# mxpfit

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
cmake/: CxxCompilerSetup.cmake  FindFFTW3.cmake
examples/: CMakeLists.txt  aak_reduction.cpp  approx_power.cpp  approx_sph_bessel.cpp  balanced_truncation.cpp  bessel_j_kernel.cpp  constants.hpp  esprit_compare.cpp  esprit_gaussian.cpp  fast_esprit.cpp  legendre.hpp  sph_bessel_kernel.cpp  tanh_sinh_rule.hpp  timer.hpp
include/fftw3/: shared_plan.hpp
include/mxpfit/: aak_reduction.hpp  approx_power.hpp  approx_sph_bessel.hpp  balanced_truncation.hpp  esprit.hpp  exponential_sum.hpp  fast_esprit.hpp  hankel_gemv.hpp  hankel_matrix.hpp  jacobi_svd.hpp  matrix_free_gemv.hpp  mod_prony_reduction.hpp  modified_prony_reduction.hpp  partial_lanczos_bidiagonalization.hpp  pow_kernel.hpp  prony_like_method_common.hpp  quasi_cauchy_rrd.hpp  self_adjoint_coneigensolver.hpp  vandermonde_least_squares.hpp  vandermonde_matrix.hpp
include/mxpfit/math/: gamma.hpp  sph_bessel.hpp
include/mxpfit/quad/: double_exponential.hpp  tanh_sinh_rule.hpp
test/: CMakeLists.txt
test/fftw3/: CMakeLists.txt  shared_plan.cpp
test/mxpfit/: CMakeLists.txt  balanced_truncation.cpp  exponential_sum.cpp  hankel_matrix.cpp  quasi_cauchy_rrd.cpp  self_adjoint_coneigensolver.cpp  vandermonde_matrix.cpp
